@@ -102,6 +102,7 @@ fim_var_help_db[FIM_VID_SCREEN_HEIGHT]= "[internal,out] the screen height" ;
 fim_var_help_db[FIM_VID_DBG_AUTOCMD_TRACE_STACK]= "[internal,in] dump to stdout autocommands stack trace during their execution (for debugging purposes)" ;
 fim_var_help_db[FIM_VID_DBG_COMMANDS]= "[internal,in] print out each command before its execution (for debugging purposes)" ;
 fim_var_help_db[FIM_VID_OPEN_OFFSET]= "[internal,in,optional] offset (specified in bytes) used when opening a file " ;
+fim_var_help_db[FIM_VID_OPEN_OFFSET_RETRY]= "[internal,in,optional] number of adjacent bytes to probe in opening the file " ;
 fim_var_help_db[FIM_VID_SEEK_MAGIC]= "[internal,optional] will seek for a magic signature before opening a file (for now, use like this: fim -c '_seek_magic=MAGIC_STRING;push file_to_seek_in.ext' ) " ;
 fim_var_help_db[FIM_VID_PREFERRED_RENDERING_WIDTH]= "[internal,in,optional] if >0, bit based rendering will use this value for a default document width (instead of a default value) " ;
 fim_var_help_db[FIM_VID_PREFERRED_RENDERING_DPI]= "[internal,in,optional] if >0, pdf, ps, djvu rendering will use this value for a default document dpi (instead of a default value) " ;
