@@ -64,6 +64,7 @@
  * added  list 'marked'  to show the list of marked files (r780*)
  * key Del bound to pop the current image from the list (r782*)
  * i:_file loader will store the used loader string (r784*)
+ * --offset accepts a range now (using the new _open_offset_retry variable) (r795*)
 
                 Version 0.4
 
